add: fontawesome css

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <meta name="theme-color" content="#ffffff">
     <script src="/assets/js/config.js"></script>
     <script src="/assets/vendors/overlayscrollbars/OverlayScrollbars.min.js"></script>
+    <link rel="stylesheet" href="assets/vendors/fontawesome/all.css">
 
 
     <!-- ===============================================-->
